sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:56: error: reassignment to val
      posJB = actJB;
            ^SelectBaseball:57: error: reassignment to val
      posJP = actJP;
            ^